Fixed overflow-x in tasks/index, due to an element being set to 100vw. It should derive from the box-sizing property used

--- a/app/assets/stylesheets/components/_generic_tasks.scss
+++ b/app/assets/stylesheets/components/_generic_tasks.scss
@@ -37,7 +37,7 @@
 
 .generic-task-main-container {
   overflow-y: hidden;
-  width: 100vw;
+  width: 97vw;
   margin: 30px 0;
 }
 
